0.13.0
 - feat: support zipped AFM workshop map data (#5)
 - docs: add missing objects to ``__all__`` (autoapi)
 - ref: code cleanup
0.12.6
 - ref: DeprecationWarning: np.float from numpy 1.20
0.12.5
 - fix: JPK file format reader kept the zip files open indefinitely
   which resulted in OSError "Too many open files" (#10)
 - ci: removed appveyor build
0.12.4
 - fix: opening .h5 files failed with AttributeError
 - ref: setup.py test is deprecated
0.12.3
 - build: migrate to GitHub Actions
0.12.2
 - fix: properly sort curves within JPK files
0.12.1
 - maintenance release
0.12.0
 - ref: rewrite JPK data file reader: new JPKReader class (#4)
 - enh: add new LazyData class for loading data on demand (#4)
0.11.0
 - feat: allow defining "detect" method to determine whether a recipe
   can open a file (#7)
0.10.2
 - maintenance release
0.10.1
 - fix: parsing issue when loading .ibw files without AM/PM in "Time"
   metadata (#8)
 - enh: make sure "time" is always parsed as HH:MM:SS.S when adding
   it to `MetaData`
 - enh: compute "curve id" and "session id" from "date", "time", and
   "enum" if not given in `MetaData`
0.10.0
 - feat: allow to override metadata when loading data
 - feat: support new file format from AFM workshop (.csv)
 - feat: support new file format from JPK (.jpk-qi-data)
 - feat: support new file format from NT-MDT (.txt exported by Nova)
 - enh: implement `AFMFormatRecipe` class for handling and verifying
   recipe dictionaries
 - enh: implement `register_format` function
0.9.0
 - feat: support new file format from Asylum Research, Igor (.ibw)
 - ref: always compute piezo range metadata instead of taking it from
   the set value in the acquisition settings (JKP format) 
0.8.0
 - enh: do not export "index" column to HDF5 files to save disk space
 - enh: save column units when exporting to HDF5
 - ref: moved class methods and constants from "afm_fdist" to "afm_data"
 - docs: add code reference, basic usage, and list of file formats
0.7.1